<resources>
    <string name="app_name">Unipi Audio Stories</string>

    <!-- General -->
    <string name="lorem_ipsum">Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. </string>

    <!-- BottomSheet Menu -->
    <string name="menu_stories">Ιστορίες</string>
    <string name="menu_statistics">Στατιστικά</string>
    <string name="menu_profile">Προφίλ</string>

    <!-- Login Screen -->
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Κωδικός Πρόσβαση</string>
    <string name="login_btn_text">Σύνδεση</string>
    <string name="register_btn_text">Δεν έχεις λογαριασμό; Εγγραφή</string>

    <!-- Register Screen -->
    <string name="confirm_pass_hint">Επιβεβαίωση Κωδικού Πρόσβασης</string>
    <string name="register_btn">Εγγραφή</string>

    <!-- Main Dashboard Screen -->
    <string name="stories_title">Παιδικές Ιστορίες</string>
    <string name="story_author_year" translatable="false">%s | %s</string>

    <!-- Favorites Screen -->
    <string name="favorites">Αγαπημένα</string>

    <!-- Play Story Screen -->
    <string name="play_story_title">Εκφώνηση Ιστορίας</string>

    <!-- Statistics Screen -->
    <string name="statistics_title">Τα Στατιστικά μου</string>
    <string name="statistics_header">Έχεις ακούσει συνολικά %d ιστορίες στην εφαρμογή.</string>
    <string name="empty_statistics_header">Δεν έχεις ακούσει κάποια ιστορία στην εφαρμογή ακόμη.</string>

    <!-- Profile Screen -->
    <string name="logged_in_as">Έχετε συνδεθεί ώς:</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="no_results_text">Δεν βρέθηκαν αποτελέσματα</string>

    <!-- Logout BottomSheet -->
    <string name="leaving">Φεύγεις;</string>
    <string name="exit">Έξοδος</string>
    <string name="not_now">Όχι τώρα</string>

</resources>