<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_l">

    <TextView
        android:id="@+id/titleTxtView"
        style="@style/text_20_bold_dark_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/leaving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/primaryBtn"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/dimen_l"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTxtView" />

    <Button
        android:id="@+id/secondaryBtn"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/grey_dark_bg"
        android:text="@string/not_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/primaryBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>